[package]
name = "spacex-api-wrapper"
version = "0.2.0"
authors = ["Alexandru Gutan <alex.gutan.m@gmail.com>"]
description = "SpaceX API Wrapper"
readme = "README.md"
homepage = "https://github.com/AGutan/spacex-api-wrapper"
repository = "https://github.com/AGutan/spacex-api-wrapper.git"
keywords = ["spacex", "api", "wrapper"]
categories = ["api-wrapper", "aerospace-data", "rest-api"]
license = "MIT/Apache-2.0"

[dependencies]
reqwest = "0.8.8"
futures = "0.1.23"
serde = "1.0.71"
serde_json = "1.0.26"

